fix post ui overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,10 @@ a {
   @apply hidden !important
 }
 
+.make-width-fit {
+  width: -webkit-fill-available !important;
+}
+
 .custom-html-style > h5 {
   @apply text-sm
 }
